<resources>
    <string name="app_name" translatable="false">myRSync</string>
    <string name="settings">Settings</string>
    <string name="srv_settings">Server Settings</string>
    <string name="loc_settings">Local Settings</string>
    <string name="opt">Rsync Options</string>
    <string name="srv_ip">Server IP Address</string>
    <string name="srv_mod">Rsync Server Mod</string>
    <string name="rsync_user">Rsync User</string>
    <string name="srv_port">Port</string>
    <string name="add_path">Add Path</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notifications">Notifications</string>
    <string name="start_time">Start Time:</string>
    <string name="repeat">Repeat:</string>
    <string name="edit_scheduler">Edit Scheduler</string>
    <string name="configuration_name">Configuration Name</string>
    <string name="n">-n</string>
    <string name="g">-g</string>
    <string name="options_help">options help</string>
    <string name="run_now">Run Now!</string>
    <string name="set_scheduler_options">Set Scheduler Options</string>
    <string name="enter_name">Enter Name</string>
    <string name="pick_a_time">Pick a Time</string>
    <string name="select_configuration">Select Configuration</string>
    <string name="scheduler_name">Scheduler Name</string>
    <string name="next_run">Next Run:</string>
    <string name="last_run">Last Run:</string>
    <string name="last_result">Last Result:</string>
    <string name="never_run">Never Run</string>
    <string name="error">error</string>
    <string name="success">Success</string>
    <string name="overview">Overview</string>
    <string name="create_a_configuration_and_add_a_scheduler">Create a Configuration and Add a Scheduler</string>
    <string name="export">Export</string>
    <string name="clear_log">Clear Log</string>
    <string name="change_path">Change Path</string>
    <string name="running">Running</string>
    <string name="rs_opt">Rsync Options</string>
    <string name="save_and_view_command">Save and View Command</string>
    <string name="generated_rsync_command">Generated Rsync Command:</string>
    <string name="title_activity_add_config">Add Rsync Configuration</string>
    <string name="save">Save</string>
    <string name="view_command">View Command</string>
    <string name="delete">Delete</string>
    <string name="no_data">No Configurations</string>
    <string name="no_schedulers">No Schedulers</string>
    <string name="app_about">About</string>
    <string name="exit">Exit</string>
    <string name="app_help">Help</string>
    <string name="title_activity_settings">Settings</string>

    <string name="about">
        Dear User,\n
        Thank you for downloading and using this application, I hope that it will help you with your project.\n\n
        My name is Socrates Chouridis and I developed this app with painstaking effort as I had no previous knowledge of Java or Android development \n\n

        However, I offer this application completely free and with no ads. If by any means you found this application useful and helped you to achieve your goal, then please consider leaving a positive rating
        or donating any amount you believe fair by using the link https://paypal.me/myrsync .\n\n

        If you need to contact me for bug reporting or anything related to this application then please send an email to myrsync@protonmail.com\n\n

        The rsync binary was compiled by using its original unmodified source code, version 3.1.3. More information regarding the rsync application can be found here:
        https://rsync.samba.org\n\n

        myRSync is free, open source and it is distributed under the GPLv3. If you want to contribute you can find it here:\n\n
        https://github.com/socratesx/myrsync \n\n

        Disclaimer: The author of this application may not be help responsible for any improper usage of this application, resulting in any kind of data loss.
        If you are not familiar with the rsync, it is strongly advised to read its documentation before using it.
    </string>
    <string name="help">
        This simple Application is intended to be a convenient way to create and schedule an rsync command in order to synchronize local folders with a server that is running an rsync daemon.
        It is an ideal solution for people that need to implement a custom cloud file backup in their network so to have total control over where their files are stored. \n\n
        <h3>How to use this app:</h3>\n\n
         1. Create Rsync Configurations.\n
         2. Run them on demand, or create Schedulers attached to them.\n
         3. Check the Overview for details regarding each scheduler/configuration pair.\n
         4. Check the Log for the rsync log entries.\n\n\n
    </string>
    <string name="rsync_options">\n\t -v, increase verbosity \n\t -q, suppress non-error messages \n\t -a, archive mode; equals -rlptgoD  \n\t  -z, compress file data during the transfer \n\t
        -r, recurse into directories \n\t -u, skip files that are newer on the receiver \n\t -p, preserve permissions \n\t -o, preserve owner (super-user only) \n\t -g, preserve group \n\t -t,
        preserve modification times \n\t -n, perform a trial run with no changes made (dry run) \n\t -m, prune empty directory chains from file-list \n\t -O, omit directories from —times
    </string>
    <string name="rsync_daemon_info">
        Use this form to build an rsync configuration. Before creating any configuration, you must ensure that an rsync daemon is up and running.
        For more details on how to setup and configure the rsync daemon please visit https://download.samba.org/pub/rsync/rsyncd.conf.html \n

        \nThis tool uses the following format of the rsync command:\n
        \nPush:
        \nrsync [OPTIONS] SRC rsync://[USER@]HOST[:PORT]/DEST\n
        \nPull:
        \nrsync [OPTIONS] rsync://[USER@]HOST[:PORT]/SRC DEST\n

        \nWith this form you actually build the rsync command by defining the OPTIONS, SRC, USER, HOST, PORT, and DEST Variables \n\n
        OPTIONS = This is the options string that is formed from the OPTIONS checkboxes. \n
        SRC = Local Directory Path to be Synced \n
        USER = Authorized Username to connect to the rsync daemon module. \n
        HOST = The IP Address of the server running the rsync Daemon. \n
        PORT = The default port is 873 but may be overriden here if it is different. \n
        DEST = The module name as it is configured in rsync daemon configuration file. \n\n

        <h3>How to Use this Form:</h3>\n\n
         1. Enter the IPv4 address of the server where the rsync daemon is running on. \n\n
         2. Enter the port where the daemon is accepting connections. If the field is left blank then the default port(TCP:873) will be used.\n\n
         3. Type the username that is allowed to connect to the configured module that is described in the confd.conf file of the rsync daemon.\n\n
         4. Type the name of the configured module.\n\n
         5. Click the \'Add Path\' button to select the local directory that will be synced with the daemon.\n\n
         6. Tick the options that will be used with the rsync command. For more info regarding the options and how they are used you can click on the \'?\' button.\n\n
         7. Tap on the \'View Command\' to check the final command that will be run. This step is optional.\n\n
         8. Click on the \'Save\' button to save the configuration. Following this step the configuration will appear on the second tab where you can click on it to edit it or run it.
        Also it will be available to select it in the Scheduler creation form. \n\n\n
    </string>
    <string name="scheduler_info">
        Create a Scheduler that will run repeatedly at the selected time and days. \n\n\
        1. Give a Name to your Scheduler\n\n\
        2. Use the drop-down list to select the rsync Configuration that will be executed with this Scheduler. \n\n\
        If the list is empty then you need to create a configuration first before creating the scheduler.\n\n\
        3. Use the clock to select the time that the rsync command will run. Note: Due to android\'s battery optimizations the timer is not exact and may have a few minutes delay.\n\n\
        4. Select the days of the week that the rsync command will run. By default all days are selected.\n\n\
        5. Save the Scheduler. Following this step the Scheduler will be listed on the \'Schedulers\' Tab, where you can click on it to edit it, and in \'Overview\' Tab
        where you can get quick information of the task.\n\n\
    </string>
    <string name="select_folder">
        The folder you selected is not writable by this application \n\n
        This is due to Android\'s security policy and permission enforcement on the External SD Directories. \n\n
        The Android allows writing to specific folders such as the /storage/emulated/0/. You can create a subfolder there and use it with rsync pull.
        If you want to save to a folder of your choice, anywhere on internal or external SD then root access is required. \n\n
        If your device is rooted you can enable the root access feature from the settings and then you can select any existing path.\n\n
    </string>
    <string name="info">Info button</string>
    <string name="push">Push</string>
    <string name="pull">Pull</string>
    <string name="mode">Mode:</string>
    <string name="selected_log">Selected Log:</string>
    <string name="edit_configurations">Edit Configurations</string>
    <string name="select_a_path">Select a Path:</string>
    <string name="advanced">Advanced:</string>
    <string name="type_rsync_options_manually">Type rsync Options manually</string>
    <string name="m">-m</string>
    <string name="rsync_adv_options">
        You can add options manually by using this textbox. \n\n
        Any options string you add here will be added as it is and after any selected checkbox options.\n\n
        You are completely responsible for the correct syntax of the options string of the rsync command. \n\n
        The app cannot validate that the options string is correct. Use the view command button to see the actual command that will run.\n\n
        This is a potentially dangerous feature that may result in data loss. Take caution when using options that delete files.
    </string>

</resources>
