<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications"
        android:summary="Enable Notifications When an Rsync Job Starts"
        android:summaryOff="Enable Notifications When an Rsync Job Starts"
        android:summaryOn="Enable Notifications When an Rsync Job Starts"
        android:title="@string/notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:dependency="notifications"
        android:key="ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:dependency="notifications"
        android:key="vibrate"
        android:title="@string/pref_title_vibrate" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="root_access"
        android:title="Root Access" />


</PreferenceScreen>
