<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".addConfig">

    <ScrollView
        android:id="@+id/addConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/srv_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/srv_settings"
                android:singleLine="true"
                android:text="@string/srv_settings"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_rsync_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/rsync_user"
                    android:inputType="text"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="@+id/ed_srv_ip"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ed_srv_ip" />

                <EditText
                    android:id="@+id/ed_rsync_mod"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/srv_mod"
                    android:inputType="text"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/ed_rsync_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ed_rsync_user" />

                <EditText
                    android:id="@+id/ed_srv_ip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/srv_ip"
                    android:inputType="text"
                    android:visibility="visible"
                    app:layout_constraintEnd_toStartOf="@+id/ed_srv_port"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/ed_srv_port"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/srv_port"
                    android:inputType="number"
                    android:visibility="visible"
                    app:layout_constraintBaseline_toBaselineOf="@+id/ed_srv_ip"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ed_srv_ip" />
            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/tv_loc_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/loc_settings"
                android:singleLine="true"
                android:text="@string/loc_settings"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_path"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/background_light"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:textIsSelectable="true"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/bt_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/add_path"
                    android:onClick="addPath"
                    android:text="@string/add_path"
                    android:visibility="visible"
                    app:layout_constraintTop_toBottomOf="@+id/tv_loc_settings"
                    app:layout_constraintVertical_chainStyle="spread_inside"
                    tools:layout_editor_absoluteX="36dp" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rs_opt"
                android:text="@string/opt"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <CheckBox
                    android:id="@+id/cb_n"
                    android:layout_width="54dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="16dp"
                    android:checked="false"
                    android:hint="-n"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/cb_a"
                    app:layout_constraintTop_toBottomOf="@+id/cb_a" />

                <CheckBox
                    android:id="@+id/cb_g"
                    android:layout_width="54dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:checked="false"
                    android:hint="-g"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/cb_O"
                    app:layout_constraintTop_toBottomOf="@+id/cb_O" />

                <CheckBox
                    android:id="@+id/cb_m"
                    android:layout_width="54dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:checked="false"
                    android:hint="-m"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/cb_p"
                    app:layout_constraintTop_toBottomOf="@+id/cb_p" />

                <CheckBox
                    android:id="@+id/cb_u"
                    android:layout_width="54dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:checked="false"
                    android:hint="-u"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/cb_t"
                    app:layout_constraintTop_toBottomOf="@+id/cb_t" />

                <CheckBox
                    android:id="@+id/cb_q"
                    android:layout_width="54dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:checked="false"
                    android:hint="-q"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/cb_n"
                    app:layout_constraintTop_toBottomOf="@+id/cb_n" />

                <CheckBox
                    android:id="@+id/cb_p"
                    android:layout_width="54dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="16dp"
                    android:checked="false"
                    android:hint="-p"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/cb_r"
                    app:layout_constraintTop_toBottomOf="@+id/cb_r" />

                <CheckBox
                    android:id="@+id/cb_t"
                    android:layout_width="54dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="16dp"
                    android:checked="false"
                    android:hint="-t"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/cb_z"
                    app:layout_constraintTop_toBottomOf="@+id/cb_z" />

                <CheckBox
                    android:id="@+id/cb_O"
                    android:layout_width="54dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="16dp"
                    android:checked="false"
                    android:hint="-O"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/cb_v"
                    app:layout_constraintTop_toBottomOf="@+id/cb_v" />

                <CheckBox
                    android:id="@+id/cb_a"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:checked="false"
                    android:hint="@string/a"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/cb_r"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/cb_r"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/r"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/cb_z"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/cb_a"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/cb_z"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/z"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/cb_v"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/cb_r"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/cb_v"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/v"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/bt_help_rsync"
                    app:layout_constraintStart_toEndOf="@+id/cb_z"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/bt_help_rsync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:onClick="rsync_help"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_help" />

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/Save_Config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_and_view_command"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/bt_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:onClick="viewCommand"
                    android:text="@string/view_command"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_rsync_command"
                    android:layout_width="181dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/generated_rsync_command"
                    android:textAlignment="viewStart"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bt_view" />

                <TextView
                    android:id="@+id/tv_rs_cmd_View"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/white"
                    android:textIsSelectable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rsync_command" />

                <Button
                    android:id="@+id/bt_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:onClick="saveConfig"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rs_cmd_View" />

                <Button
                    android:id="@+id/bt_execute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:text="Run Now!"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rs_cmd_View" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>